Thêm bộ đếm thời gian

--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@ quiz-node/
 
       
       <button id="start-btn" style="padding: 12px 20px; background-color: #28a745; color: white; border: none; border-radius: 6px; cursor: pointer;">Làm bài</button>
+      <div id="timer-box" style="display: none; margin-bottom: 20px; font-size: 1.2em; font-weight: bold; color: #dc3545;">
+  ⏱️ Thời gian còn lại: <span id="timer">--:--</span>
+</div>
+
 
     </div>
     
