Sửa hiển thị đồng hồ tính giờ

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ quiz-node/
 
     </div>
     
-    <div id="timer-box">  ⏱️ Thời gian còn lại: <span id="timer">--:--</span></div>
+    <div id="timer-box" style="display: none;">  ⏱️ Thời gian: <span id="timer"></span></div>
 
     <div id="quiz-container" style="display: none;">        
         <!-- Nội dung sẽ được tải bởi app.js -->
